# py-project-template

./: .gitignore  README.md  pyproject.toml  pytest.ini
