[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["name <mail.address>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = { version = "^3.7", optional = true }
autopep8 = { version = "^1.4", optional = true }

[tool.poetry.extras]
vscode = ["flake8", "autopep8"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
